# poetry-devcontainer

./: pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
