[tool.poetry]
name = "examplelib"
version = "1.0.0"
description = "Example of a Python project using Poetry in a Dev Container"
authors = ["Douglas Plumley <douglas.plumley@dartmouth.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.2"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
